--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,16 @@
 @tailwind components;
 
 @tailwind utilities;
+
+input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: white !important;
+  opacity: 1 !important; /* Firefox */
+}
+
+input:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: white !important;
+}
+
+input::-ms-input-placeholder { /* Microsoft Edge */
+  color: white !important;
+}
